--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,9 @@
 {
-    "recommendations": [
-        "vscode-icons-team.vscode-icons",
-        "streetsidesoftware.code-spell-checker"
-    ]
+  "recommendations": [
+    "ms-playwright.playwright",
+    "vscode-icons-team.vscode-icons",
+    "streetsidesoftware.code-spell-checker",
+    "esbenp.prettier-vscode",
+    "dbaeumer.vscode-eslint"
+  ]
 }
